[package]
name = "jobworkerp-main"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "all-in-one"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"


[dependencies]
proto = { path = "../proto" }
command-utils = { path = "../modules/command-utils" }
infra-utils = { path = "../modules/infra-utils" }
jobworkerp-runner = { path = "../runner" }
infra = { path = "../infra" }
app = { path = "../app" }
app-wrapper = { path = "../app-wrapper" }
worker-app = { path = "../worker-app" }
grpc-front = { path = "../grpc-front" }

anyhow = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
