[package]
name = "jobworkerp-plugin-abi"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Stable ABI definitions for V2 jobworkerp plugins (FFI types, vtable, PluginV2 trait)"

[dependencies]
# Only async-ffi has an exact-pin contract; tokio / tokio-util can move
# freely between host and plugin now that no tokio type crosses the
# boundary directly.
async-ffi = "=0.5.0"
async-trait = "0.1"
futures = "0.3"
# Used by `PluginInstance` to anchor the `&'static Library` reference
# created by the host loader. Plugin authors don't `dlopen` anything
# themselves, but this dependency is pulled by the shared `PluginInstance`
# type so the same lifetime invariant compiles on both sides.
libloading = "0.9"
prost = "0.14"
# Plugin author convenience: re-exporting the proc-macro from this crate
# lets `use jobworkerp_plugin_abi::register_plugin_v2;` be the single
# entry point and keeps `Cargo.toml` examples down to one dependency.
jobworkerp-plugin-abi-macros = { path = "../jobworkerp-plugin-abi-macros", version = "0.1.0" }
# `sync` covers `Notify` / `Mutex` / `mpsc`; `rt` enables `tokio::spawn`
# used inside `from_tokio_util`; `macros` enables `select!` / `pin!`.
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }
# `CancellationToken` lives in `tokio_util::sync`.
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

[dev-dependencies]
# Tests need `tokio::test`, `tokio::time::*`, and the multi-threaded
# runtime flavor; production code does not.
tokio = { version = "1", default-features = false, features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
