[package]
name = "plugin_runner_cancel_test"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "V2 plugin sample: cooperative cancellation via CancellationToken"

[lib]
crate-type = ["dylib"]

[dependencies]
proto = { path = "../../proto" }
jobworkerp-runner = { path = "../../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
# Required by `register_plugin_v2!` for sync-side panic catch (the macro
# wraps the high-level trait return values in `catch_unwind`).
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
