[package]
name = "plugin_runner_cancel_test"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "V2 plugin sample: cooperative cancellation via CancellationToken"

[lib]
crate-type = ["dylib"]

[dependencies]
# Proto crate is only needed because this sample uses the host's
# `MethodSchema` to populate `method_proto_map`. A standalone plugin
# author would depend on a proto crate of their choice.
proto = { path = "../../proto" }
jobworkerp-plugin-abi = { path = "../../modules/jobworkerp-plugin-abi" }
jobworkerp-plugin-abi-macros = { path = "../../modules/jobworkerp-plugin-abi-macros" }

anyhow = { workspace = true }
async-trait = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
