[package]
name = "collectable_test"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
proto = { path = "../../proto" }
jobworkerp-runner = { path = "../../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
