[package]
name = "plugin_runner_hello"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Example for jobworkerp runner plugin"

[lib]
crate-type = ["dylib"]

[dependencies]
common = { path = "../../common" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
