[package]
name = "plugin_runner_hello"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Example for jobworkerp runner plugin"

[lib]
crate-type = ["dylib"]

[dependencies]
proto = { path = "../../proto" }
jobworkerp-runner = { path = "../../runner" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
