[package]
name = "jobworkerp_mistral_runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Mistral runner plugin for jobworkerp"

[lib]
crate-type = ["dylib"]

[dependencies]
proto = { path = "../../proto" }
jobworkerp-runner = { path = "../../runner" }
jobworkerp-base = { path = "../../base" }
app = { path = "../../app" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
opentelemetry = { workspace = true }
serde_yaml.workspace = true

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = []
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]
nccl = ["mistralrs/nccl"]
